--- a/3. Hafta/3.Hafta Eğitim Öncesi Görevleri (1).ipynb
+++ b/3. Hafta/3.Hafta Eğitim Öncesi Görevleri (1).ipynb
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 4,
       "metadata": {
         "id": "MXTtCxI1_Te8"
       },
@@ -76,33 +76,34 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "AA\n"
+            "CB\n"
           ]
         }
       ],
       "source": [
         "vizenot = int(input(\"Vize notunuzu giriniz: \"))\n",
         "finalnot = int(input(\"Final notunuzu giriniz: \"))\n",
+        "notort = (vizenot * (0.40)) + (finalnot * (0.60))\n",
         "if finalnot < 50:\n",
         "    print(\"FF\")\n",
-        "notort = (vizenot * (0.40)) + (finalnot * (0.60))\n",
-        "if notort >= 85:\n",
-        "    print(\"AA\")\n",
-        "elif notort >= 75 and notort <85:\n",
-        "    print(\"BA\")\n",
-        "elif notort >= 70 and notort <75:\n",
-        "    print(\"BB\")\n",
-        "elif notort >= 65 and notort <70:\n",
-        "    print(\"CB\")\n",
-        "elif notort >= 60 and notort <65:\n",
-        "    print(\"CC\")\n",
-        "elif notort >= 55 and notort <60:\n",
-        "    print(\"DC\")\n",
-        "elif notort >= 50 and notort <55:\n",
-        "    print(\"DD\")\n",
         "else:\n",
-        "    print(\"FF\")\n",
-        "    \n"
+        "    if notort >= 85:\n",
+        "        print(\"AA\")\n",
+        "    elif notort >= 75 and notort <85:\n",
+        "        print(\"BA\")\n",
+        "    elif notort >= 70 and notort <75:\n",
+        "        print(\"BB\")\n",
+        "    elif notort >= 65 and notort <70:\n",
+        "        print(\"CB\")\n",
+        "    elif notort >= 60 and notort <65:\n",
+        "        print(\"CC\")\n",
+        "    elif notort >= 55 and notort <60:\n",
+        "        print(\"DC\")\n",
+        "    elif notort >= 50 and notort <55:\n",
+        "        print(\"DD\")\n",
+        "    else:\n",
+        "        print(\"FF\")\n",
+        "        \n"
       ]
     },
     {
