--- a/3. Hafta/3.Hafta Eğitim Öncesi Görevleri (1).ipynb
+++ b/3. Hafta/3.Hafta Eğitim Öncesi Görevleri (1).ipynb
@@ -338,7 +338,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.10.5 64-bit",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -357,7 +357,7 @@
     "orig_nbformat": 4,
     "vscode": {
       "interpreter": {
-        "hash": "5026d2d6e7aaaaba093def813beadff083d8733e4a511af01735cbabd156995d"
+        "hash": "fe08b3bf7c974c721045664a3bac61415d6e497350f49234b5ba1e2458a0fc19"
       }
     }
   },
