--- a/6. Hafta/Eğitim Öncesi(6.Hafta).ipynb
+++ b/6. Hafta/Eğitim Öncesi(6.Hafta).ipynb
@@ -426,17 +426,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "programda hata oluştu.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Hata fırlatma - raise kullanılır.\n",
     "def tersCevir(s):\n",
@@ -445,9 +437,10 @@
     "    else:\n",
     "        return s[::-1]\n",
     "try:\n",
-    "    print(tersCevir(12))\n",
+    "    print(tersCevir(\"12\"))\n",
     "except ValueError:\n",
-    "    print(\"programda hata oluştu.\")"
+    "    print(\"programda hata oluştu.\")\n",
+    "# print(tersCevir(True)) raise hata mesajını ekrana yazdırır."
    ]
   }
  ],
