--- a/7. Hafta/Eğitim Öncesi(7.Hafta).ipynb
+++ b/7. Hafta/Eğitim Öncesi(7.Hafta).ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Nesne yönelimli progrmlama\n",
+    "# Dosya Okuma İŞlemleri\n",
     "# open(DosyaIsmi, DosyaModu)\n",
     "# r: okuma modu belirtilen konumda dosya olması gerekir.\n",
     "# close() dosyayı kapatır."
